[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/DialogsScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/alagard.ttf" type="DynamicFontData" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[node name="DialogsScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Dialog" type="Node2D" parent="."]

[node name="DialogBox" type="Sprite" parent="Dialog"]
material = SubResource( 1 )
position = Vector2( -115.789, 523.673 )
centered = false

[node name="CharTalking" type="Sprite" parent="Dialog"]
material = SubResource( 1 )
position = Vector2( 164.109, 380.14 )

[node name="Text1" type="Label" parent="Dialog"]
material = SubResource( 1 )
margin_left = 91.7123
margin_top = 565.276
margin_right = 166.712
margin_bottom = 610.276
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.0705882, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="Dialog"]
material = SubResource( 1 )
margin_left = 91.7123
margin_top = 605.276
margin_right = 226.712
margin_bottom = 650.276
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.0705882, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text3" type="Label" parent="Dialog"]
material = SubResource( 1 )
margin_left = 91.7123
margin_top = 645.276
margin_right = 226.712
margin_bottom = 690.276
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.0705882, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
